# Seashell

./: .clang-format  README.md  flake.nix  meson.build
src/: Command.hpp  Expr.hpp  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  Log.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp  main.cpp
